--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { 
-  "homepage": "https://prince-monga/github.io/Lodha-Evergreen"
+  "homepage": "https://prince-monga/github.io/Lodha-Evergreen",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
